tests/pact/bad/bad-name-module-length.repl
(module tooooooooooooooo-looooooooooooooooooooooooooooong G
  (defcap G () true))
